fix: fixed alignment of avatar container and exluded .map files from gulp zip

--- a/frontend/assets/css/home.css
+++ b/frontend/assets/css/home.css
@@ -12,6 +12,7 @@
 
 .home-content > #right-content {
     @apply
+    flex justify-center items-center
     grow-[3.5] basis-0
 }
 
